--- a/src/less/common.less
+++ b/src/less/common.less
@@ -14,7 +14,7 @@ body {
     min-width: 1226px;
 }
 ul{list-style: none;margin-bottom: 0;}
-a,a:hover{text-decoration: none;}
+a,a:hover,a:active,a:focus,a:visited{text-decoration: none;}
 a:hover{color: #ff6700;}
 em,i,strong,b{font-style: normal;}
 img{display: block;}
