--- a/src/less/common.less
+++ b/src/less/common.less
@@ -1,5 +1,12 @@
 @charset 'utf-8';
 
+// 常用参数
+@orange:#ff6700;
+@gray:#b0b0b0;
+@topHei: 40px;
+@carHei: 100px;
+@tempWid: 234px;
+@tempHei: 340px;
 @baseUrl:'../img/';
 
 
