--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,6 @@
 @charset 'utf-8';
+@import 'library/bootstrap.min.css';
+@import 'library/swiper-bundle.min.css';
 * {
   margin: 0;
   padding: 0;
@@ -79,7 +81,55 @@ h1 {
     transform: scaleY(0.5);
   }
 }
+@-moz-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-moz-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
 @-o-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-o-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-o-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-webkit-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-webkit-keyframes loadcenter {
   from {
     transform: scaleY(1);
   }
@@ -103,6 +153,230 @@ h1 {
     transform: scaleY(0.5);
   }
 }
+@keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-moz-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-moz-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-moz-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-o-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-o-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-o-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-webkit-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-webkit-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-webkit-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-moz-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-moz-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-moz-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-o-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-o-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-o-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-webkit-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-webkit-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-webkit-keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@keyframes loadcenter {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.5);
+  }
+}
+@-moz-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-moz-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
 @-moz-keyframes loadside {
   from {
     transform: scaleY(1);
@@ -119,7 +393,247 @@ h1 {
     transform: scaleY(0.3);
   }
 }
+@-o-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-o-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
 @-webkit-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-webkit-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-webkit-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-moz-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-moz-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-moz-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-o-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-o-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-o-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-webkit-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-webkit-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-webkit-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-moz-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-moz-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-moz-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-o-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-o-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-o-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-webkit-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-webkit-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@-webkit-keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@keyframes loadside {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(0.3);
+  }
+}
+@keyframes loadside {
   from {
     transform: scaleY(1);
   }
@@ -392,20 +906,20 @@ h1 {
 .type_list > li > a:hover {
   background: #ff6700;
 }
+/**
+* animation
+*/
 .swiper_wrapper {
   height: 460px;
   overflow: hidden;
   position: relative;
 }
 .swiper_wrapper .swiper_list > li > a {
-  display: none;
+  display: block;
 }
 .swiper_wrapper .swiper_list > li > a img {
   width: 100%;
   height: 100%;
-}
-.swiper_wrapper .swiper_list > li > a.active {
-  display: block;
 }
 .swiper_wrapper .swiper_pagination {
   position: absolute;
@@ -413,8 +927,9 @@ h1 {
   right: 30px;
   bottom: 20px;
   text-align: right;
+  z-index: 99;
 }
-.swiper_wrapper .swiper_pagination > a {
+.swiper_wrapper .swiper_pagination > span {
   display: inline-block;
   border-radius: 50%;
   -webkit-border-radius: 50%;
@@ -424,11 +939,13 @@ h1 {
   width: 10px;
   height: 10px;
   margin: 0 3px;
-  background: rgba(0, 0, 0, 0.4);
   border: solid 2px #fff;
   border-color: hsla(0, 0%, 100%, 0.3);
+  background: rgba(0, 0, 0, 0.4);
+  opacity: 1;
 }
-.swiper_wrapper .swiper_pagination > a.on {
+.swiper_wrapper .swiper_pagination > span:hover,
+.swiper_wrapper .swiper_pagination > span.swiper-pagination-bullet-active {
   background: hsla(0, 0%, 100%, 0.4);
   border-color: rgba(0, 0, 0, 0.4);
 }
@@ -480,10 +997,10 @@ h1 {
   padding-top: 18px;
   color: #fff;
   opacity: 0.7;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: opacity 0.3s;
+  -moz-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
+  transition: opacity 0.3s;
 }
 .home_channel_list > li > a::before,
 .home_channel_list > li > a::after {
@@ -940,4 +1457,280 @@ h1 {
 }
 .hmt_video_list li:first-of-type a {
   margin-left: 0;
+}
+.footer_service {
+  padding: 27px 0;
+  border-bottom: 1px solid #b0b0b0;
+}
+.footer_service ul li {
+  float: left;
+  width: 245.2px;
+  height: 25px;
+  line-height: 25px;
+  font-size: 16px;
+  border-left: 1px solid #b0b0b0;
+  text-align: center;
+}
+.footer_service ul li:first-child {
+  border-left-color: transparent;
+}
+.footer_service ul li a {
+  color: #616161;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+}
+.footer_service ul li a:hover {
+  color: #ff6700;
+}
+.footer_service ul li a em {
+  margin-right: 8px;
+  font-size: 18px;
+  vertical-align: -4px;
+}
+.footer_links {
+  padding: 40px 0;
+}
+.footer_links .flinks_item {
+  float: left;
+  width: 160px;
+  margin: 0;
+}
+.footer_links .flinks_item > dt {
+  margin: -1px 0 26px;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.25;
+  color: #424242;
+}
+.footer_links .flinks_item > dd {
+  margin: 10px 0 0;
+  font-size: 12px;
+}
+.footer_links .flinks_item > dd > a {
+  color: #757575;
+}
+.footer_links .flinks_item_right {
+  float: right;
+  width: 252px;
+  border-left: 1px solid #e0e0e0;
+  text-align: center;
+  color: #616161;
+}
+.footer_links .flinks_item_right .phone {
+  font-size: 22px;
+  line-height: 1;
+  color: #ff6700;
+}
+.footer_links .flinks_item_right p {
+  margin: 0 0 5px 0;
+  font-size: 12px;
+}
+.footer_links .flinks_item_right .staff {
+  display: inline-block;
+  width: 118px;
+  height: 28px;
+  font-size: 12px;
+  line-height: 28px;
+  padding: 0;
+  margin: 0;
+  border: 1px solid #ff6700;
+  text-align: center;
+  background: #fff;
+  color: #ff6700;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+}
+.footer_links .flinks_item_right .staff:hover {
+  background: #ff6700;
+  color: #fff;
+}
+.footer_links .flinks_item_right .staff em {
+  vertical-align: -1px;
+}
+.footer_links .flinks_item_right .follow {
+  font-size: 12px;
+  margin-top: 10px;
+  position: relative;
+}
+.footer_links .flinks_item_right .follow a {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 6px;
+  margin-top: -3px;
+}
+.footer_links .flinks_item_right .follow a.wb {
+  background: url('../img/wb.png') 50% 0 no-repeat;
+  background-size: cover;
+}
+.footer_links .flinks_item_right .follow a.wb:hover {
+  background: url('../img/wb@2x.png') 50% 0 no-repeat;
+  background-size: cover;
+}
+.footer_links .flinks_item_right .follow a.wx {
+  background: url('../img/wx.png') 50% 0 no-repeat;
+  background-size: cover;
+}
+.footer_links .flinks_item_right .follow a.wx:hover {
+  background: url('../img/wx@2x.png') 50% 0 no-repeat;
+  background-size: cover;
+}
+.footer_links .flinks_item_right .follow a.wx:hover + img {
+  display: block;
+}
+.footer_links .flinks_item_right .follow img {
+  display: none;
+  width: 126px;
+  height: 126px;
+  position: absolute;
+  top: 20px;
+  left: 100px;
+  z-index: 2;
+}
+.footer_info {
+  padding: 30px 0;
+  font-size: 12px;
+  background: #fafafa;
+}
+.footer_info .finfo_cont {
+  position: relative;
+}
+.footer_info .finfo_logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 57px;
+  height: 57px;
+  margin-right: 10px;
+  background: url('../img/logo-footer.png') no-repeat 50% 50%;
+}
+.footer_info .finfo_text {
+  color: #b0b0b0;
+  padding-left: 67px;
+}
+.footer_info .finfo_text .sites {
+  margin: 0;
+  line-height: 18px;
+}
+.footer_info .finfo_text .sites a {
+  color: #757575;
+}
+.footer_info .finfo_text .coryright {
+  line-height: 18px;
+}
+.footer_info .finfo_text .coryright a {
+  color: #b0b0b0;
+}
+.footer_info .finfo_links {
+  margin: 4px 0 15px;
+  padding-left: 67px;
+}
+.footer_info .finfo_links a {
+  display: inline-block;
+}
+.footer_info .finfo_links a img {
+  width: auto;
+  height: 28px;
+  margin-left: 0;
+}
+.footer_info .finfo_links a.safe img {
+  height: 40px;
+}
+.footer_info .finfo_links a.safe img:last-child {
+  display: none;
+}
+.footer_target {
+  margin: 30px auto 0;
+  width: 100%;
+  height: 19px;
+}
+.footer_target img {
+  height: 100%;
+  margin: auto;
+}
+.aside {
+  position: fixed;
+  left: 50%;
+  right: auto;
+  margin-left: 613px;
+  bottom: 40px;
+}
+.aside_tool li {
+  position: relative;
+  width: 27px;
+  height: 42px;
+  border: 1px solid #f5f5f5;
+  background-color: #fff;
+  cursor: pointer;
+  padding: 10px 0;
+}
+.aside_tool li > img {
+  width: 20px;
+  height: 20px;
+  margin: 0 auto;
+}
+.aside_tool li.toTop {
+  margin-top: 14px;
+  visibility: hidden;
+}
+.aside_tool li .tag {
+  display: none;
+  position: absolute;
+  right: 145%;
+  top: 0;
+  padding: 0 8px;
+  background-color: #fff;
+  border: 1px solid #f5f5f5;
+  z-index: 999;
+}
+.aside_tool li .tag::before,
+.aside_tool li .tag::after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  width: 0;
+  height: 0;
+  margin-top: -6px;
+  border-width: 6px;
+  border-style: solid;
+  overflow: hidden;
+}
+.aside_tool li .tag::before {
+  border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #f5f5f5;
+  right: -13px;
+  z-index: 1;
+}
+.aside_tool li .tag::after {
+  border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #fff;
+  right: -12px;
+  z-index: 2;
+}
+.aside_tool li .tagimg > img {
+  width: 100px;
+  height: 100px;
+  margin: 6px auto;
+}
+.aside_tool li .tagimg > .desc {
+  display: block;
+  width: 82px;
+  margin: 14px auto 0;
+  color: #757575;
+  text-align: center;
+}
+.aside_tool li .tagtext {
+  top: 50%;
+  margin-top: -15px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  white-space: nowrap;
+}
+.aside_tool li .tagtext::before,
+.aside_tool li .tagtext::after {
+  top: 15px;
 }
